# erato

./: CHANGELOG.md  CLAUDE.md  README.md  build-lex.sh  cabal.project  erato.cabal
.github/: copilot-instructions.md
Grammar/: AllEngAbs.pgf  EratoAbs.gf  EratoAbs.gfo  EratoAbs.pgf  EratoEng.gf  EratoEng.gfo
app/: CorpusMain.hs  Main.hs
data/: lexicon_extras.yaml
scripts/: build_lexicon.py  check_memory_regression.py  lexicon_requirements.txt
src/Engine/Core/: Queue.hs
src/Parser/: AST.hs  GFParser.hs  Pretty.hs  Translate.hs
test/: Main.hs
test/Test/: Adjectives.hs  Agreement.hs  CommonVocabulary.hs  Complements.hs  Contractions.hs  Coordination.hs  Copula.hs  CorpusRegression.hs  Determiners.hs  Existential.hs  Imperative.hs  Invalid.hs  Modals.hs  MoreDeterminers.hs  MorePrepositions.hs  Negation.hs  Passive.hs  Possessives.hs  Prepositions.hs  Progressive.hs  Pronouns.hs  ProperNouns.hs  Questions.hs  RelativeClauses.hs  SubordinateClauses.hs  Tense.hs  TokenizationHardening.hs  Utils.hs  VerbAdverbs.hs
